--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "client-install": "npm install --prefix client",
     "server-install": "npm install --prefix server",
+    "client-install": "npm install --prefix client",
     "server": "nodemon index.js --prefix server",
     "client": "npm start --prefix client",
-    "start": "concurrently \"npm run server\" \"npm run client\""
+    "start": "concurrently \"npm install\" \"npm run server-install\" \"npm run client-install\" \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
