--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "local-food-services",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "server-install": "npm install --prefix server",
-    "client-install": "npm install --prefix client",
-    "server": "nodemon index.js --prefix server",
-    "client": "npm start --prefix client",
-    "start": "concurrently \"npm install\" \"npm run server-install\" \"npm run client-install\" \"npm run server\" \"npm run client\""
+    "server-install": "npm install --prefix ./server",
+    "client-install": "npm install --prefix ./client",
+    "client": "cd client && npm start",
+    "server": "cd server && npm start",
+    "start": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
