--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "server",
+  "name": "lfs-server",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js localhost 4000"
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
   },
   "dependencies": {
-    "apollo-server-express": "^2.9.13",
+    "apollo-server": "^2.9.13",
     "graphql": "^14.5.8",
     "mongoose": "^5.7.14"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
