--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "nodemon": "^2.0.1"
   },
   "dependencies": {
-    "apollo-server": "^2.9.13",
+    "apollo-server-express": "2.9.13",
+    "bodyParser": "latest",
+    "cors": "2.8.5",
+    "express": "4.17.1",
     "graphql": "^14.5.8",
     "mongoose": "^5.7.14"
   },
