--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "bodyParser": "latest",
     "cors": "2.8.5",
     "express": "4.17.1",
-    "graphql": "^14.5.8",
-    "mongoose": "^5.7.14"
+    "graphql": "14.5.8",
+    "mongoose": "5.8.0"
   },
   "keywords": [],
   "description": ""
