update for heroku deployment

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "lfs-server",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js localhost 4000"
+    "start": "node index.js",
+    "dev": "nodemon index.js localhost 4000"
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
