--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
   },
   "dependencies": {
     "@babel/core": "^7.7.5",
-    "lodash": "^4.17.15",
     "apollo-server-express": "2.9.13",
     "body-parser": "^1.19.0",
     "cors": "2.8.5",
     "express": "4.17.1",
+    "express-session": "^1.17.0",
     "graphql": "14.5.8",
-    "mongoose": "5.8.0"
-  }
+    "graphql-passport": "^0.5.0",
+    "lodash": "^4.17.15",
+    "mongoose": "5.8.0",
+    "passport": "^0.4.1",
+    "uuid": "^3.3.3"
+  },
+  "keywords": [],
+  "description": ""
 }
