--- a/package.json
+++ b/package.json
@@ -15,16 +15,14 @@
   "dependencies": {
     "@babel/core": "^7.7.5",
     "apollo-server-express": "2.9.13",
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "cors": "2.8.5",
     "express": "4.17.1",
-    "express-session": "^1.17.0",
     "graphql": "14.5.8",
-    "graphql-passport": "^0.5.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "5.8.0",
-    "passport": "^0.4.1",
-    "uuid": "^3.3.3"
+    "mongoose": "5.8.0"
   },
   "keywords": [],
   "description": ""
